fixing image in dark mode

--- a/src/output.css
+++ b/src/output.css
@@ -2084,6 +2084,10 @@ input:checked + .toggle-bg {
   align-items: center;
 }
 
+.justify-normal {
+  justify-content: normal;
+}
+
 .justify-start {
   justify-content: flex-start;
 }
